clang/test/BSC/Negative/Trait/r2/kw_trait/kw_trait.cbs
// RUN: %clang_cc1 -verify %s

typedef int _Trait; // expected-error {{declaration of anonymous _Trait must be a definition}}
                   // expected-error@-1 {{invalid syntax, semi not expected after '_Trait (null)'}}
                   // expected-warning@-2 {{typedef requires a name}}
_Trait x = 1;       // expected-error {{expected identifier or '('}}

?   // expected-error {{expected identifier or '('}}

int main() {
  return 0;
}